Archive2/e9/e3ce4f1b2d79da/output
main.cpp: In instantiation of ‘<lambda(auto:1)>::<lambda(std::function<int(int)>)> [with auto:1 = int]’:
main.cpp:24:30:   required from ‘struct<lambda(auto:1)> [with auto:1 = int]::<lambda(class std::function<int(int)>)>’
main.cpp:26:1:   required from ‘<lambda(auto:1)> [with auto:1 = int]’
main.cpp:30:15:   required from here
main.cpp:24:35: error: use of ‘<lambda(auto:1)> [with auto:1 = int]’ before deduction of ‘auto’
         return terminal(func(term)); // >---------+
                                   ^
main.cpp:24:35: error: invalid use of ‘auto’
